# runtime-magic

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: apple_framework.cmake  colored_output.cmake  custom_compile_options.cmake
cmake/modules/: Finddbus.cmake
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/include/rtfm/: core.h
modules/core/include/rtfm/core/: constants.h  info.h  rhymes.h
modules/core/include/rtfm/core/info/: library_info.h  sem_ver.h
modules/core/include/rtfm/core/meta/: version.h.in
modules/core/include/rtfm/core/parser/: sem_ver_parser.h
modules/core/include/rtfm/core/rhyme/: ipc.h  lib_info.h
modules/core/include/rtfm/core/rhymes/: ipc.h  library_info.h  version.h
modules/core/src/: core.cc
modules/core/src/info/: sem_ver.cc
modules/core/src/parser/: sem_ver_parser.cc
modules/ipc/: CMakeLists.txt
modules/ipc/dbus/: CMakeLists.txt
modules/ipc/dbus/include/rtfm/: core.h
modules/ipc/dbus/include/rtfm/ipc/meta/: dbus_version.h.in
modules/ipc/dbus/src/: main.mm
modules/ipc/dbus/src/core/ipc/: dbus.cc
modules/ipc/macos_notification_center/: macos_notification_center.h
modules/rtfm/: CMakeLists.txt
modules/rtfm/include/rtfm/: core.h
modules/rtfm/include/rtfm/core/: rhyme.h
modules/rtfm/include/rtfm/ipc/: dbus.h
modules/rtfm/src/: core.cc
modules/server/: CMakeLists.txt
modules/server/include/rtfm/: server.h
modules/server/include/rtfm/server/: constants.h
modules/server/include/rtfm/server/meta/: version.h.in
modules/server/src/: server.cpp
